# mcp-sqlite3

./: .bumpversion.cfg  CHANGELOG.md  LICENSE  README.md  SKILL.md  SPEC.md  mcp.json  pyproject.toml  server.json
.github/workflows/: pypi-publish.yml
src/mcp_sqlite3/: __init__.py  __main__.py  mcp.py
tests/: conftest.py  test_mcp.py
